# veridoc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/auth/: claims.py  dependencies.py  jwt_verify.py  supabase_service.py
app/core/: config.py
app/db/: models.py  session.py
app/domain/: knowledge_model_constants.py
app/repositories/: collection_repository.py  document_repository.py  knowledge_model_repository.py  pipeline_repository.py
app/schemas/: collection.py  document.py  health.py  knowledge_model.py  search.py  user_api.py
app/services/: bayes_fusion_score.py  collection_detail_service.py  collection_mutation_service.py  collection_slug.py  dependency_health.py  document_access.py  document_content_extract.py  document_metadata_service.py  document_service.py  document_text_extract.py  document_transfer_service.py  event_service.py  exceptions.py  identity_service.py  knowledge_model_service.py  (+10 more)
config/: application.example.yml
db/: README.md
docs/: README.md  accounts-and-collections.md  auth-supabase.md  commands.md  developing-locally.md  docker-compose.md  document-metadata-design.md  openapi.json  pipeline-stages.md  project-overview.md  security.md  tenancy-postgres.md  url-ingest.md
postman/: VerifiedSignal.local.postman_collection.json  VerifiedSignal.local.postman_environment.json
scripts/: export_openapi.py
supabase/: README.md  config.toml
tests/: README.md  conftest.py  test_cli.py
worker/: main.py  tasks.py
(+102 files in other folders)
